src/test/ui/rfc-2005-default-binding-mode/slice.stderr
error[E0004]: non-exhaustive patterns: `&[]` not covered
  --> $DIR/slice.rs:17:11
   |
17 |     match sl {
   |           ^^ pattern `&[]` not covered

error: aborting due to previous error

